Refactor: Update `AdwHomeBadger` to use `List.of` instead of `Arrays.asList`.